# zendesk-mcp

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  catalog-data.json  description.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  server.py
src/models/: schemas.py
src/services/: zendesk_client.py
src/tools/: __init__.py  get_service_trends.py  get_ticket_details.py  get_top_agents.py  search_tickets.py  search_tickets_by_tag.py  search_tickets_with_keywords.py
src/utils/: date_utils.py  query_filters.py
